<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Jetpack Navigation</string>
    <string name="welcome">Welcome, you should deposit money first</string>
    <string name="deposit">DEPOSIT</string>
    <string name="home">HOME</string>
    <string name="amount">Amount</string>
    <string name="add_money">ADD MONEY</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="default_money">0$</string>
    <string name="send_money">Send Money</string>
    <string name="total_money">Total Money:</string>
    <string name="default_tv">TextView</string>
    <string name="name">Name</string>
    <string name="next">next</string>
    <string name="tv_error">You don\'t have enough money!!</string>
    <string name="default_message">$1 was sent to Berk</string>
    <string name="deeplink">Deep Link</string>
    <string name="deep_link_instructions">Type your deep link args</string>
    <string name="send_deep_link_notification_button">Send deep link notification</string>
</resources>